--- a/css/style.css
+++ b/css/style.css
@@ -26,10 +26,12 @@ h2 {
 
 .left-description {
     width: 370px;
+    height 400px;
     border-style: dotted;
     border-color: grey;
     border-width: 0 1px 0 0;
     padding-right: 30px;
+    float: left;
 }
 
 .left-description-text {
@@ -42,7 +44,22 @@ h2 {
 }
 
 .right-description {
-    float: right;
+    width: 370px;
+    height: 400px;
+    float: left;
+}
+
+.right-desc-headshots {
+    width: 370px;
+    height: 140px;
+}
+
+.headshot {
+    float: left;
+    border-style: solid;
+    border-width: 10px;
+    border-color: white;
+    margin-left: 20px;
 }
 
 .content {
