--- a/css/style.css
+++ b/css/style.css
@@ -18,23 +18,21 @@ h2 {
     font-weight: medium;
     font-size: 18px;
     text-transform: uppercase;
-    padding-bottom: 10px;
+    padding-bottom: 20px;
     border-bottom-style: dotted;
     border-color: grey;
     border-bottom-width: 1px;
 }
 
-.left-description {
+.short-description {
     width: 370px;
     height 400px;
-    border-style: dotted;
-    border-color: grey;
-    border-width: 0 1px 0 0;
     padding-right: 30px;
+    margin-top: 20px;
     float: left;
 }
 
-.left-description-text {
+.short-description-text {
     font-family: "Maven Pro", "Arial";
     font-weight: normal;
     font-size: 14px;
@@ -43,15 +41,39 @@ h2 {
     margin: 20px 0 10px 0;
 }
 
-.right-description {
-    width: 370px;
+/* need div to have a block around the <a> element to get the top-bottom margin */
+#more-details-div {
+    margin: 50px 100px 0 100px;
+}
+
+#more-details {
+    font-family: "Maven Pro", "Arial";
+    color: white;
+    background-color: black;
+    padding: 10px 10px 10px 10px;
+    text-align: center;
+    text-decoration: none;
+    text-transform: uppercase;
+}
+
+#more-details:hover {
+    background-color: red;
+    border-color: red;
+}
+
+.bio {
+    width: 390px;
     height: 400px;
+    border-style: dotted;
+    border-color: grey;
+    border-width: 0 0 0 1px;
+    margin-top: 20px;
     float: left;
 }
 
-.right-desc-headshots {
+.bio-headshots {
     width: 370px;
-    height: 140px;
+    height: 160px;
 }
 
 .headshot {
@@ -59,12 +81,57 @@ h2 {
     border-style: solid;
     border-width: 10px;
     border-color: white;
-    margin-left: 20px;
+    margin-left: 30px;
+    margin-top: 20px;
 }
 
-.content {
+#hotes {
+    width: 100%;
+    margin: 0 5px 0 5px;
+}
+
+.hote {
+    float: left;
+    width: 45%;
+    margin: 0 5px 0 5px;
+}
+
+.hote-name {
+    font-family: "Maven Pro", "Arial";
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 140%;
+    text-align: center;
+}
+
+.hote-bio {
+    font-family: "Maven Pro", "Arial";
+    font-weight: normal;
+    font-size: 10px;
+    line-height: 140%;
+    text-align: justify;
+}
+
+body {
     max-width: 800px;
     margin: auto;
+}
+
+#hotes-entete {
+    font-family: "Maven Pro", "Arial";
+    font-size: 24px;
+    font-weight: normal;
+    text-align: center;
+    text-transform: uppercase;
+}
+
+.hotes-text {
+    font-family: "Maven Pro", "Arial";
+    font-weight: normal;
+    font-size: 12px;
+    line-height: 140%;
+    text-align: justify;
+    margin: 20px 0 0 20px;
 }
 
 .top-banner {
